# fgbuster

./: .buildinfo  .gitignore  .travis.yml  README.md  README.rst  TODO.md  algebra.py  analytic_components.py  api.html  component_model.py  contributing.html  data_models.py  design.md  example_usage.ipynb  examples.html  genindex.html  index.html  map_separation.py  objects.inv  plot_utils.py  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  separation_recipies.py  setup.py  test_xForecast.py  visualization.py
.doctrees/: algebra.doctree  example_separation.doctree  fgbuster.algebra.doctree  fgbuster.component_model.doctree  fgbuster.separation_recipies.doctree  fgbuster.xForecast.doctree  mixing_matrix.doctree  separation.doctree  xForecast.doctree
.doctrees/api/: fgbuster.mixingmatrix.doctree  fgbuster.xForecast.doctree
.doctrees/examples/: separation.doctree  xForecast.doctree
_modules/: index.html
_modules/fgbuster/: algebra.html  component_model.html  cosmology.html  mixingmatrix.html  observation_helpers.html  separation_recipes.html  separation_recipies.html  xForecast.html
_sources/: api.rst.txt  contributing.rst.txt  index.rst.txt
_sources/api/: fgbuster.algebra.rst.txt  fgbuster.component_model.rst.txt  fgbuster.cosmology.rst.txt  fgbuster.mixingmatrix.rst.txt  fgbuster.observation_helpers.rst.txt  fgbuster.separation_recipes.rst.txt
_sources/examples/: separation.ipynb.txt  (+3 more)
api/: fgbuster.algebra.html  fgbuster.component_model.html  fgbuster.cosmology.html  fgbuster.mixingmatrix.html  fgbuster.observation_helpers.html  fgbuster.separation_recipes.html  fgbuster.separation_recipies.html
docs/: Makefile
doctrees/: api.doctree  component_model.doctree  contributing.doctree  environment.pickle  examples.doctree  fgbuster.mixingmatrix.doctree  index.doctree  mixingmatrix.doctree  separation_recipes.doctree
dustbuster/: algebra.py  angular_spectrum_estimation.py  component_model.py  pysm_helpers.py  separation_recipies.py  visualization.py  xForecast.py
example/: separation.ipynb  xForecast.ipynb
examples/: component_and_mixingmatrix.html  detailed_separation.html  intermediate_separation.html  multi_res_separation.html  separation.html  simple_separation-Copy1.html  simple_separation.html  xForecast.html
fgbuster/: __init__.py  algebra.py  angular_spectrum_estimation.py  component_model.py  cosmo.py  cosmology.py  mixingmatrix.py  observation_helpers.py  pysm_helpers.py  separation_recipes.py  separation_recipies.py  visualization.py  xForecast.py
html/: .buildinfo  api.html  contributing.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
scripts/: intermediate_component_separation.py~
(+128 files in other folders)
